# ratchet

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  ARCHITECTURE_MIGRATION_ANALYSIS.md  ARCHITECTURE_MIGRATION_STATUS.md  BUILD_OPTIMIZATION_REPORT.md  CAPABILITY_GAPS_ANALYSIS.md  CHANGES.md  CLAUDE.md  CLI-SERVE.md  CODEBASE_REVIEW_ANALYSIS.md  Cargo.toml  Dockerfile  HEARTBEAT.md  IMPORT_FIXES_SUMMARY.md  IMPROVEMENT_RECOMMENDATIONS.md  LLM_TASK_DEVELOPMENT.md  RATCHET_LIB_USAGE_ANALYSIS.md  README.md  REFINE_REST_API_IMPLEMENTATION_PLAN.md  REGISTRY_WATCH_IMPLEMENTATION_PLAN.md  REGISTRY_WATCH_TRADEOFFS.md  SSE_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_SUMMARY.md  TODO.md  basic-config-fixed.yaml  basic-config.yaml  claude_config_examples.json  claude_desktop_config.json  config.yaml  docker-compose.yml  example-claude-config.yaml  example-config.yaml  example-mcp-claude-integration.yaml  example-mcp-enterprise.yaml  example-sse-config.yaml  mcp-console-config.yaml  phase5c.md  (+10 more)
axum-mcp/: Cargo.toml  README.md
axum-mcp/examples/: minimal_server.rs
axum-mcp/src/: error.rs  lib.rs
ratchet-api/: Cargo.toml
ratchet-api-types/: Cargo.toml
ratchet-api-types/src/: conversions.rs  domain.rs  enums.rs  errors.rs  ids.rs  lib.rs  pagination.rs
ratchet-api/src/: config.rs  errors.rs  lib.rs  pagination.rs  server.rs  types.rs
ratchet-caching/: Cargo.toml
ratchet-caching/src/: cache.rs  config.rs  errors.rs  http_cache.rs  lib.rs  result_cache.rs  stats.rs  task_cache.rs
ratchet-cli/: Cargo.toml
ratchet-cli-tools/: Cargo.toml
ratchet-cli-tools/src/: generate.rs  js_execution.rs  lib.rs  recording.rs
ratchet-cli/src/: cli.rs  main.rs  main_new.rs  main_old.rs
ratchet-config/: Cargo.toml
ratchet-config/examples/: config_migration_demo.rs  config_migration_demo.rs.disabled  simple_config_demo.rs
ratchet-config/src/: cli.rs  compat.rs  error.rs  lib.rs  loader.rs  migration.rs  validation.rs
ratchet-config/tests/: integration_test.rs
ratchet-core/: Cargo.toml
ratchet-core/src/: config.rs  error.rs  execution.rs  lib.rs  service.rs  task.rs  types.rs  validation.rs
ratchet-error-middleware/: Cargo.toml
ratchet-error-middleware/src/: graphql.rs  lib.rs  mcp.rs  middleware.rs  rest.rs  sanitization.rs  traits.rs
ratchet-error-middleware/tests/: integration_tests.rs
ratchet-execution/: Cargo.toml
ratchet-execution/src/: bridge.rs  error.rs  executor.rs  ipc.rs  lib.rs  process.rs  worker.rs
ratchet-graphql-api/: Cargo.toml
ratchet-graphql-api/src/: context.rs  errors.rs  events.rs  lib.rs  schema.rs
ratchet-graphql-api/tests/: basic_performance_tests.rs  integration_tests.rs  performance_tests.rs  security_tests.rs
ratchet-http/: Cargo.toml
ratchet-http/src/: client.rs  config.rs  errors.rs  lib.rs  recording.rs  types.rs
ratchet-interfaces/: Cargo.toml
ratchet-interfaces/src/: database.rs  execution.rs  lib.rs  logging.rs  registry.rs  scheduler.rs  service.rs  tasks.rs
ratchet-ipc/: Cargo.toml
ratchet-ipc/src/: error.rs  lib.rs  protocol.rs  transport.rs
ratchet-js/: Cargo.toml
ratchet-js/src/: conversion.rs  error_handling.rs  execution.rs  execution_old.rs  fetch.rs  http_integration.rs  js_task.rs  lib.rs  task_loader.rs  types.rs
ratchet-lib/: Cargo.toml
ratchet-lib/src/: config.rs  errors.rs  generate.rs  http.rs  js_executor.rs  js_task.rs  lib.rs  recording.rs  services.rs  task.rs  test.rs  types.rs
ratchet-lib/tests/: addition_task_webhook_integration_test.rs  circuit_breaker_test.rs  enhanced_rest_api_test.rs  graphql_playground_queries_test.rs  llm_logging_test.rs  load_balancer_test.rs  logging_config_test.rs  logging_test.rs  output_config_validation_test.rs  output_delivery_integration_test.rs  output_destinations_graphql_test.rs  output_destinations_rest_api_test.rs  process_separation_integration_test.rs  rest_api_test.rs  task_execution_e2e_test.rs  validate_test.rs
ratchet-logging/: Cargo.toml
ratchet-logging/src/: config.rs  context.rs  enrichment.rs  error_info.rs  event.rs  init.rs  lib.rs  llm_export.rs  logger.rs  mod.rs  patterns.rs  severity.rs
ratchet-logging/tests/: llm_logging_test.rs  logging_config_test.rs  logging_test.rs
ratchet-mcp/: Cargo.toml
ratchet-mcp/examples/: basic_integration.rs  ratchet_server_example.rs.disabled
ratchet-mcp/src/: client.rs  config.rs  error.rs  lib.rs  ratchet_server.rs  service.rs
ratchet-mcp/tests/: basic_performance_tests.rs  mcp_protocol_tests.rs  performance_tests.rs  security_tests.rs  security_validation_tests.rs  streaming_integration_test.rs  task_development_tools_test.rs
ratchet-output/: CROSS_PLATFORM.md  Cargo.toml
ratchet-output/src/: destination.rs  errors.rs  lib.rs  manager.rs  metrics.rs  template.rs
ratchet-plugin/: Cargo.toml
ratchet-plugin/src/: core.rs  discovery.rs  error.rs  hooks.rs  lib.rs  loader.rs  manager.rs  registry.rs  types.rs
ratchet-plugins/: Cargo.toml
ratchet-plugins/src/: lib.rs
ratchet-rbac/: Cargo.toml
ratchet-rbac/src/: adapter.rs  auth.rs  config.rs  enforcer.rs  error.rs  lib.rs  middleware.rs  models.rs  permissions.rs  policies.rs  roles.rs  tenant.rs
ratchet-registry/: Cargo.toml
ratchet-registry/src/: config.rs  error.rs  lib.rs  registry.rs  service.rs  types.rs  watcher.rs
ratchet-registry/tests/: git_integration_test.rs  gitoxide_test.rs  https_git_test.rs  integration_test.rs
ratchet-resilience/: Cargo.toml
ratchet-resilience/src/: backoff.rs  circuit_breaker.rs  lib.rs  retry.rs  shutdown.rs
ratchet-rest-api/: Cargo.toml
ratchet-rest-api/src/: app.rs  context.rs  errors.rs  lib.rs
ratchet-rest-api/tests/: basic_performance_tests.rs  e2e_schedule_workflow_test.rs  performance_tests.rs  refine_dev_integration_tests.rs  security_tests.rs  test_framework.rs
ratchet-runtime/: Cargo.toml
ratchet-runtime/src/: error.rs  executor.rs  lib.rs  process.rs  worker.rs
ratchet-server/: Cargo.toml  README.md  config-example.yaml
ratchet-server/src/: bridges.rs  config.rs  (+9 more)
ratchet-storage/: Cargo.toml
ratchet-web/: Cargo.toml  server.pid
(+670 files in other folders)
