[package]
name = "axum-mcp"
version = "0.1.0"
edition = "2021"
description = "Generic MCP (Model Context Protocol) implementation with Axum integration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ratchet-runner/ratchet"
authors = ["Ratchet Contributors"]
keywords = ["mcp", "axum", "llm", "ai", "protocol"]
categories = ["web-programming", "api-bindings", "development-tools"]
readme = "README.md"

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization and JSON handling
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# HTTP client and server  
axum = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"
reqwest = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Additional dependencies for transport
url = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
humantime-serde = "1.1"

[features]
default = ["server", "client", "transport-stdio", "transport-sse", "transport-streamable-http", "handlers"]
server = []
client = []
transport-stdio = []
transport-sse = []
transport-streamable-http = []
handlers = []

[dev-dependencies]
tokio-test = "0.4"
tower = "0.4"
hyper = "1.0"
tracing-subscriber = "0.3"

[[example]]
name = "minimal_server"
required-features = ["server", "transport-sse", "handlers"]