[package]
name = "ratchet-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified API layer (REST and GraphQL) for Ratchet"

[dependencies]
ratchet-core = { path = "../ratchet-core" }
ratchet-storage = { path = "../ratchet-storage" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# REST API dependencies (disabled for now)
# axum = { workspace = true, optional = true }
# tower = { version = "0.5", optional = true }
# tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"], optional = true }
tracing = { workspace = true }

# GraphQL dependencies (disabled for now)
# async-graphql = { version = "7.0", optional = true }
# async-graphql-axum = { version = "7.0", optional = true }

[features]
default = []
# rest = ["axum", "tower", "tower-http"]
# graphql = ["async-graphql", "async-graphql-axum", "axum"]
# full = ["rest", "graphql"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }