[package]
name = "ratchet-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified API layer (REST and GraphQL) for Ratchet"

[dependencies]
ratchet-core = { path = "../ratchet-core" }
ratchet-storage = { path = "../ratchet-storage" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# REST API dependencies
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }

# GraphQL dependencies
async-graphql = { workspace = true, optional = true }
async-graphql-axum = { workspace = true, optional = true }

# Additional server dependencies
futures = { version = "0.3", optional = true }
http = { version = "1.0", optional = true }
http-body = { version = "1.0", optional = true }
hyper = { version = "1.0", optional = true }

# Authentication dependencies
jsonwebtoken = { version = "9.2", optional = true }
bcrypt = { version = "0.15", optional = true }
once_cell = { version = "1.19", optional = true }
async-trait = { version = "0.1" }
rand = { version = "0.8", optional = true }
form_urlencoded = { version = "1.2", optional = true }

[features]
default = ["rest", "graphql", "auth"]
rest = ["axum", "tower", "tower-http", "http", "http-body", "hyper"]
graphql = ["async-graphql", "async-graphql-axum", "axum", "futures"]
auth = ["jsonwebtoken", "bcrypt", "once_cell", "rand", "form_urlencoded"]
full = ["rest", "graphql", "auth"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }