[package]
name = "ratchet-caching"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Caching abstractions and implementations for Ratchet"

[dependencies]
ratchet-core = { path = "../ratchet-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
chrono = { workspace = true }
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }