[package]
name = "ratchet-caching"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Caching abstractions and implementations for Ratchet"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
uuid = { workspace = true }
moka = { version = "0.12", features = ["future"], optional = true }
parking_lot = "0.12"
lru = { workspace = true, optional = true }

[features]
default = ["inmemory", "lru", "ttl", "moka"]
inmemory = []
lru = ["dep:lru"]
moka = ["dep:moka"]
ttl = []
all = ["inmemory", "lru", "moka", "ttl"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }