[package]
name = "ratchet"
version.workspace = true
edition.workspace = true
# Inherit workspace-level package configuration
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratchet CLI app"

# Dependencies
[dependencies]

# Use workspace-level dependencies
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
clap.workspace = true
env_logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true
axum.workspace = true

# Local dependencies
ratchet_lib = { path = "../ratchet-lib" }
ratchet-mcp = { path = "../ratchet-mcp" }
ratchet-config = { path = "../ratchet-config" }
ratchet-core = { path = "../ratchet-core" }
ratchet-storage = { path = "../ratchet-storage", features = ["seaorm"] }

# Binary-specific dependencies (commented out for now due to network issues)
# dialoguer = "0.11"
# indicatif = "0.17"
