[package]
name = "ratchet"
version.workspace = true
edition.workspace = true
# Inherit workspace-level package configuration
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratchet CLI app"

# Dependencies
[dependencies]

# Use workspace-level dependencies
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
clap.workspace = true
env_logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true
axum.workspace = true

# Local dependencies
# ratchet_lib = { path = "../ratchet-lib", optional = true } # REMOVED - migrated to modular crates
ratchet-execution = { path = "../ratchet-execution", optional = true }
ratchet-mcp = { path = "../ratchet-mcp", optional = true }
ratchet-config = { path = "../ratchet-config" }
ratchet-core = { path = "../ratchet-core" }
ratchet-storage = { path = "../ratchet-storage", optional = true }
ratchet-caching = { path = "../ratchet-caching", optional = true }
ratchet-resilience = { path = "../ratchet-resilience", optional = true }
ratchet-plugins = { path = "../ratchet-plugins", optional = true }
ratchet-runtime = { path = "../ratchet-runtime", optional = true }
ratchet-js = { path = "../ratchet-js", optional = true }
ratchet-http = { path = "../ratchet-http", optional = true }
ratchet-output = { path = "../ratchet-output", optional = true }
ratchet-server = { path = "../ratchet-server", optional = true }
ratchet-registry = { path = "../ratchet-registry", optional = true }
ratchet-cli-tools = { path = "../ratchet-cli-tools", features = ["javascript", "recording", "http"] }

# Binary-specific dependencies (commented out for now due to network issues)
# dialoguer = "0.11"
# indicatif = "0.17"

# Feature flags for optional functionality
[features]
default = ["server", "database", "mcp-server", "plugins", "javascript", "output", "runtime", "http"]

# Core functionality (minimal build)
core = []

# Server components
server = ["rest-api", "graphql-api", "dep:ratchet-execution", "dep:ratchet-server", "dep:ratchet-registry"]
rest-api = []
graphql-api = []

# Database backends
database = ["sqlite", "dep:ratchet-storage"]
sqlite = ["ratchet-storage/database", "ratchet-storage/seaorm"]
postgres = ["ratchet-storage/postgres"]
mysql = ["ratchet-storage/mysql"]

# MCP Server implementation
mcp-server = ["mcp-stdio", "mcp-sse", "dep:ratchet-mcp", "dep:ratchet-execution"]
mcp-stdio = ["ratchet-mcp/transport-stdio"]
mcp-sse = ["ratchet-mcp/transport-sse"]

# Plugin system
plugins = ["static-plugins", "dep:ratchet-plugins"]
static-plugins = []
dynamic-plugins = ["ratchet-plugins/dynamic"]

# JavaScript execution
javascript = ["dep:ratchet-js"]

# Output destinations
output = ["dep:ratchet-output"]

# Caching backends
caching = ["dep:ratchet-caching"]

# Resilience patterns
resilience = ["dep:ratchet-resilience"]

# Runtime execution engine
runtime = ["dep:ratchet-runtime"]

# HTTP client functionality
http = ["dep:ratchet-http"]

# Full feature set (everything enabled)
full = ["server", "database", "mcp-server", "plugins", "javascript", "output", "caching", "resilience", "runtime"]

# Minimal build (core functionality only)
minimal = ["core"]

# Development profile (includes everything for development)
dev-full = ["full", "dynamic-plugins"]

# Production profiles
production = ["server", "database", "mcp-server", "static-plugins", "output"]
enterprise = ["full", "postgres"]
