[package]
name = "ratchet-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = { workspace = true }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"


# For CLI (optional)
clap = { version = "4.4", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap"]

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
temp-env = "0.3"
tempfile = "3.8"
