[package]
name = "ratchet-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain models and types for Ratchet"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
jsonschema = "0.30"
log = { workspace = true }
regex = "1.10"
url = "2.5"
cron = "0.15"
tracing = { workspace = true }
ratchet-config = { path = "../ratchet-config" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"

[features]
default = []