[package]
name = "ratchet-execution"
version = "0.1.0"
edition = "2021"
description = "Task execution engine for Ratchet - provides ProcessTaskExecutor and related types"
authors = ["Ratchet Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/ratchet"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
thiserror = { workspace = true }
num_cpus = "1.16"

# Local crates
ratchet-interfaces = { path = "../ratchet-interfaces" }
ratchet-config = { path = "../ratchet-config" }
ratchet-storage = { path = "../ratchet-storage" }
ratchet-ipc = { path = "../ratchet-ipc" }
ratchet-js = { path = "../ratchet-js" }

# Process management
tokio-process = { version = "0.2", optional = true }

[features]
default = ["process"]
process = ["tokio-process"]