[package]
name = "ratchet-graphql-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
ratchet-api-types = { path = "../ratchet-api-types" }
ratchet-interfaces = { path = "../ratchet-interfaces" }
ratchet-web = { path = "../ratchet-web" }
ratchet-core = { path = "../ratchet-core" }
ratchet-mcp = { path = "../ratchet-mcp" }
# ratchet-error-middleware = { path = "../ratchet-error-middleware" } # DISABLED

# External dependencies
async-graphql = { workspace = true, features = ["playground", "apollo_tracing"] }
async-graphql-axum = { workspace = true }
axum = { workspace = true, features = ["tokio", "query"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures-util = "0.3"
# tokio-stream removed - using futures directly for simpler implementation

[dev-dependencies]
tokio-test = "0.4"
fastrand = { workspace = true }