[package]
name = "ratchet-http"
version.workspace = true
edition.workspace = true

authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client functionality for Ratchet"

[dependencies]
# Core dependencies
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
async-trait = "0.1"

# Recording functionality
chrono.workspace = true
once_cell = { workspace = true }

# Configuration
ratchet-config = { path = "../ratchet-config" }

# HTTP server utilities (optional)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
http = { workspace = true, optional = true }

[features]
default = ["recording", "client"]
recording = []
client = []
server = ["dep:axum", "dep:tower-http", "dep:http"]
all = ["recording", "client", "server"]